--- a/resume.html
+++ b/resume.html
@@ -1,98 +1,257 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="assets/css/portfolio.css"/>
-	</head>
-	<body class="body-center">
-		<title>Resume</title>
-		<script type="text/javascript" src="assets/js/portfolio.js"></script>
-		<!-- navbar -->
-		<div class="navbar">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="resume.html">Resume</a></li>
-				<li><a href="projects.html">Projects</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
+<div class="jumbotron text-center">
+	<h1>Resume</h1>
+	{{message}}
+</div>
+<div class="panel-group" id="accordion">
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h4 class="panel-title">
+				<a data-toggle="collapse" data-parent="#accordion" href="#education">Education</a>
+			</h4>
 		</div>
-		<!-- end navbar -->
-		<br/>
-		<br/>
-		<br/>
-		<h1>Resume</h1>
-		<h3>Education</h3>
-		<p><strong>Class of 2017 - University of Illinois - Urbana-Champaign, IL</strong></p>
-		<ul>
-			<li><i>Major</i>: B.S. Computer Science</li>
-			<li><i>Current GPA</i>: 3.95/4.00</li>
-			<li><i>Awards</i>: Dean's List, James Scholar, University Achievement Scholarship Recipient, GE STAR Award Recipient, Cisco Scholarship</li>
-			<li><i>Related Coursework</i>: Introduction to Computer Science (CS 125), Discrete Structures (CS 173), Applied Linear Algebra (MATH 415), Honors Calculus III (MATH 241)</li>
-		</ul>
-		<p><strong>Diploma with Honors - Class of 2013 - Lakota East High School - Liberty Township, OH</strong></p>
-		<ul>
-			<li><i>GPA</i>: Valedictorian (rank: 1/685), 4.75/4.00 Weighted, 4.00/4.00 Unweighted</li>
-			<li><i>Awards</i>: NCWIT Award for Aspirations in Computing Ohio Affiliate Award, National AP Scholar, National Merit Commended Scholar</li>
-			<li><i>Related Coursework</i>: AP Computer Science, AP Calculus BC, AP Physics C, AP Chemistry, AP Statistics</li>
-		</ul>
-		<h3>Work Experience</h3>
-		<p><strong>kCura</strong>, Chicago, IL<br/><strong>Software Engineering Intern, Product Development</strong>, May 2014 - Present</p>
-		<ul>
-			<li>Using the custom Relativity API, Visual C#, and SQL, continuing development on an application built on top of kCura’s flagship product Relativity that analyzes and processes U.S. patent grant data that is uploaded onto a custom Google site.</li>
-			<li>Added features to the processing of such data that allows the user to sort the patents by their patent classifications and sub-classifications, as well as see various metrics of the patent including expiration date and extracted text.</li>
-			<li>Added components that downloads and processes assignment data for patent grants to keep the assignees and owners of patents up-to-date daily.</li>
-		</ul>
-		<p><strong>Miss Possible</strong>, Urbana-Champaign, IL<br/><strong>Web Developer</strong>, February 2014 - Present</p>
-		<ul>
-			<li>Designed and currently maintaining the website for Miss Possible (bemisspossible.com), a startup that is focused on empowering girls by providing them strong female role models through dolls as well as developing apps that let girls learn about famous female scientists as well as be able to do science experiments in their own homes.</li>
-			<li>Used HTML, CSS, and Javascript to code the website’s main design, as well as PHP and MySQL to implement a database-driven backend to maintain blog posts and an email sign-up list.</li>
-			<li>Assisted in conducting consumer interviews for Miss Possible at Engineering Open House.</li>
-			<li>Assisted in using social media, email and other mediums to spread the word about Miss Possible’s Indiegogo campaign.</li>
-		</ul>
-		<p><strong>Procter and Gamble</strong> (INTERalliance), Cincinnati, OH<br/><strong>GBS-HRSS Information Technology Development Organization Intern</strong>, July 2013 - Aug. 2013</p>
-		<ul>
-			<li>Entered necessary business impact information regarding enterprise architecture into P&G's data repository MEGA</li>
-			<li>Provided and presented a training presentation on how to use MEGA and its company functions for team members</li>
-			<li>Tested user interface standardization of an in-house application on various mobile operating systems and Internet browsers</li>
-			<li>Collated software download results for management after testing the initial points of P&G's HRSS Business Continuity Plan, as well as surveyed organization members regarding required hardware for the plan</li>
-		</ul>
-		<p><strong>Paycor Inc.</strong> (INTERalliance), Cincinnati, OH<br/><strong>Information Technology Application Development Intern</strong>, June 2012 - Aug. 2012</p>
-		<ul>
-			<li>Designed the user interface for one of Paycor's in-house web applications using HTML and CSS</li>
-			<li>Analyzed video software options to help Paycor with coordinating documents to offshore employees in Mumbai, India</li>
-			<li>Coordinated knowledge transfer documentation with offshore employees in Mumbai, India using SharePoint</li>
-			<li>Developed a data-driven version of Paycor's online training application using Microsoft .NET Visual C# and ASPX.NET</li>
-		</ul>
-		<h3>Leadership and Activities</h3>
-		<p><strong>CS 125 Course Assistant</strong> (Jan. 2014 - May 2014)</p>
-		<ul>
-			<li>Assisted the CS 125 teaching assistant with one 2-hour weekly discussion class by taking attendance, answering questions.</li>
-			<li>Held one office hour per week to assist students with machine problems, learning new concepts, and other homework needs.</li>
-		</ul>
-		<p><strong>Society of Women Engineers</strong> (Aug. 2013 - Present)<br/><i>Team Tech, Secretary</i></p>
-		<ul>
-			<li>As Secretary, kept meeting minutes during weekly meetings.</li>
-			<li>Research methods for implementing a more cost-effective and sustainable tractor seat for John Deere.</li>
-			<li>With 4 team members, drafted and presented a new design for the tractor seat for the Team Tech Directors.</li>
-		</ul>
-		<p><strong>Women in Computer Science</strong> (Aug. 2013 - Present)</p>
-		<ul>
-			<li>Member of WCS Tech Team, designed the front-end portion of an online sign-in application for meetings.</li>
-			<li>Member of the planning committee for WCS’ annual ChicTech retreat, a retreat that invites high school and middle school girls to come learn about computer science.</li>
-			<li>Led a workshop on HTML/CSS and taught 20 girls how to design their own website.</li>
-		</ul>
-		<p><strong>Engineering Student Alumni Ambassador</strong> (April 2014 - Present)</p>
-		<ul>
-			<li>Attended various networking events sponsored by ESAA with UIUC Engineering alumni.</li>
-			<li>Volunteered at Engineering Senior Sunday, an event held at the end of the year to celebrate the seniors graduating from Engineering at UIUC.</li>
-			<li>Currently working with the Chairman and Publicity Chair to update all of the content on the organization’s wiki page as well as giving the wiki a new user interface redesign.</li>
-		</ul>
-		<h3>Skills</h3>
-		<ul>
-			<li><i>Programming Languages</i>: Java (Proficient), Visual C# (Advanced), Visual Basic for Applications (Basic)</li>
-			<li><i>Front-end Development</i>: HTML (Proficient), CSS (Proficient), ASPX.NET (Basic), WordPress (Proficient), Javascript (Proficient), jQuery (Basic)</li>
-			<li><i>Back-end Development</i>: SQL (Basic), MySQL (Basic), PHP (Basic)</li>
-			<li><i>Version Control Systems</i>: Git (Basic), SVN (Basic), Mercurial (Proficient), Team Foundation Server (Basic)</li>
-		</ul>
-	</body>
-</html>
+		<div id="education" class="panel-collapse collapse in">
+			<div class="panel-body">
+				<!-- UIUC -->
+				<div class="floatCleared">
+					<p class="alignleft"><strong>University of Illinois at Urbana-Champaign</strong></p>
+					<p class="alignright"><i>Expected: May 2017</i></p>
+				</div>
+				<div class="floatCleared">
+					<p class="alignleft"><strong>B.S. Computer Science</strong></p>
+					<p class="alignright"><i>GPA: 3.95/4.00</i></p>
+				</div>
+				<br/><br/>
+				<div class="col-md-6">
+					<p><i>Awards</i></p>
+					<ul>
+						<li>Dean's List</li>
+						<li>James Scholar</li>
+						<li>University Achievement Scholarship</li>
+						<li>GE STAR Award</li>
+						<li>SWE Cisco Scholarship</li>
+						<li>John Deere Scholarship for Women in Computer Science</li>
+					</ul>
+				</div>
+				<div class="col-md-6">
+					<p><i>Relevant Coursework</i></p>
+					<ul>
+						<li>Introduction to Computer Science - CS 125</li>
+						<li>Discrete Structures - CS 173</li>
+						<li>Applied Linear Algebra - MATH 415</li>
+						<li>Data Structures - CS 225 * </li>
+						<li>Numerical Methods I - CS 357 * </li>
+						<li>Computer Architecture - CS 233 *</li>
+						<li>Probability and Statistics - MATH 463 *</li>
+					</ul>
+					<p>* denotes currently taking</p>
+				</div>
+				<!-- LEHS -->
+				<div class="floatCleared">
+					<hr></hr>
+					<p class="alignleft"><strong>Lakota East High School, Liberty Twp, OH</strong></p>
+					<p class="alignright"><i>May 2013</i></p>
+				</div>
+				<div class="floatCleared">
+					<p class="alignleft"><strong>GPA: 4.75/4.00 (Weighted), 4.00/4.00 (Unweighted)</strong></p>
+					<p class="alignright"><strong>Valedictorian (1/685)</strong></p>
+				</div>
+				<br/></br>
+				<p><i>Awards</i></p>
+				<ul>
+					<li>NCWIT Aspirations in Computing Ohio Affiliate Award</li>
+					<li>National AP Scholar</li>
+					<li>National Merit Commended Scholar</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h4 class="panel-title">
+				<a data-toggle="collapse" data-parent="#accordion" href="#workExperience">Work Experience</a>
+			</h4>
+		</div>
+		<div id="workExperience" class="panel-collapse collapse">
+			<div class="panel-body">
+				<!-- Dow -->
+				<div class="floatCleared">
+					<p class="alignleft"><strong>Dow Chemical Company</strong></p>
+					<p class="alignright"><i>Research Park, Urbana-Champaign, IL</i></p>
+				</div>
+				<div class="floatCleared">
+					<p class="alignleft"><strong>Systems Intern</strong></p>
+					<p class="alignright"><i>Aug. 2014 - Present</i></p>
+				</div>
+				<!-- kCura -->
+				<div class="floatCleared">
+					<hr></hr>
+					<p class="alignleft"><strong>kCura</strong></p>
+					<p class="alignright"><i>Chicago, IL</i></p>
+				</div>
+				<div class="floatCleared">
+					<p class="alignleft"><strong>Software Engineering Intern, Product Development</strong></p>
+					<p class="alignright"><i>May 2014 - Aug. 2014</i></p>
+				</div>
+				<br/><br/>
+				<ul>
+					<li>Using the custom Relativity API, Visual C#, and SQL, continued development on an application built on top of kCura’s flagship product Relativity that analyzes and processes 5,000 U.S. patent grants downloaded weekly from a custom Google site.</li>
+					<li>Added features to the processing of such data that allows the user to sort the patents by over 400 patent classifications.</li>
+					<li>Added components that processed assignment data for patent grants to keep the assignees/owners of patents up-to-date daily.</li>
+					<li>Using the Espacenet REST API, added components that validate the patent based on its legal events.</li>
+				</ul>
+				<!-- Miss Possible -->
+				<div class="floatCleared">
+					<hr></hr>
+					<p class="alignleft"><strong>Miss Possible</strong></p>
+					<p class="alignright"><i>Urbana-Champaign, IL</i></p>
+				</div>
+				<div class="floatCleared">
+					<p class="alignleft"><strong>Web Developer</strong></p>
+					<p class="alignright"><i>Feb. 2014 - Present</i></p>
+				</div>
+				<br/><br/>
+				<ul>
+					<li>Developed and maintaining the website for Miss Possible (<a href="http://www.bemisspossible.com" target="_blank">http://www.bemisspossible.com</a>), a startup that is focused on empowering girls by providing them strong female role models through dolls as well as developing apps that let girls learn about these role models and do hands-on activities led by them.</li>
+					<li>Assisted in using social media and other mediums to market Miss Possible’s <a href="https://www.indiegogo.com/projects/miss-possible-dolls-to-inspire-girls-across-generations">Indiegogo campaign</a> that raised $85,755.</li>
+				</ul>
+				<!-- P&G -->
+				<div class="floatCleared">
+					<hr></hr>
+					<p class="alignleft"><strong>Procter &#38; Gamble</strong></p>
+					<p class="alignright"><i>Cincinnati, OH</i></p>
+				</div>
+				<div class="floatCleared">
+					<p class="alignleft"><strong>GBS-HRSS Information Technology Development Organization Intern</strong></p>
+					<p class="alignright"><i>July 2013 - Aug. 2013</i></p>
+				</div>
+				<br/><br/>
+				<ul>
+					<li>Assisted in entering necessary data regarding enterprise architecture into the data repository MEGA.</li>
+					<li>Prepared a training presentation regarding MEGA and its functions for team members. </li>
+					<li>Assisted in the testing of an in-house application on various mobile operating systems and Internet browsers. </li>
+					<li>Collated results from testing parts of P&#38;G Human Resources Services &#38; Solutions' Business Continuity Plan.</li>
+				</ul>
+				<!-- Paycor -->
+				<div class="floatCleared">
+					<hr></hr>
+					<p class="alignleft"><strong>Paycor, Inc.</strong></p>
+					<p class="alignright"><i>Cincinnati, OH</i></p>
+				</div>
+				<div class="floatCleared">
+					<p class="alignleft"><strong>Information Technology Application Development Intern</strong></p>
+					<p class="alignright"><i>June 2012 - Aug. 2012</i></p>
+				</div>
+				<br/><br/>
+				<ul>
+					<li> Designed the user interface for one of Paycor's in-house web applications using HTML and CSS.</li>
+					<li>Analyzed video software options to help Paycor with offshore employees in Mumbai, India.</li>
+					<li>Coordinated knowledge transfer documenetation with offshore employees in Mumbai, India.</li>
+					<li>Developed a data-driven version of Paycor's training application using Microsoft .NET Visual C#.</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h4 class="panel-title">
+				<a data-toggle="collapse" data-parent="#accordion" href="#leadershipActivities">Leadership and Activites</a>
+			</h4>
+		</div>
+		<div id="leadershipActivities" class="panel-collapse collapse">
+			<div class="panel-body">
+				<!-- WCS -->
+				<div class="floatCleared">
+					<p class="alignleft"><strong>Women in Computer Science</strong></p>
+					<p class="alignright"><i>Aug. 2013 - Present</i></p>
+				</div>
+				<br/><br/>
+				<p><i>Mentoring Director 2014-2015, Tech Team Member 2013-2014</i></p>
+				<ul>
+					<li>Plan monthly events for upperclassmen and underclassmen to engage and share advice and experiences with each other.</li>
+					<li>Helped plan WCS’ annual ChicTech retreat, a retreat inviting high school girls to come learn about computer science.</li>
+					<li>Planned and led a workshop on HTML/CSS, teaching 20 girls how to design their own websites.</li>
+				</ul>
+				<!-- ESAA -->
+				<div class="floatCleared">
+					<hr></hr>
+					<p class="alignleft"><strong>Engineering Student Alumni Ambassadors</strong></p>
+					<p class="alignright"><i>May 2014 - Present</i></p>
+				</div>
+				<br/><br/>
+				<ul>
+					<li>Assist with the logistics of events that help foster relationships between current Engineering students and alumni.</li>
+					<li>Currently working on updating the wiki page for the organization.</li>
+				</ul>
+				<!-- SWE -->
+				<div class="floatCleared">
+					<hr></hr>
+					<p class="alignleft"><strong>Society of Women Engineers</strong></p>
+					<p class="alignright"><i>Au. 2013 - Present</i></p>
+				</div>
+				<br/></br>
+				<p><i>Team Tech 2013-2014</i></p>
+				<ul>
+					<li>Research methods for implementing a more cost-effective and sustainable tractor seat for John Deere.</li>
+				</ul>
+				<!-- CS 125 Course Assistant -->
+				<div class="floatCleared">
+					<hr></hr>
+					<p class="alignleft"><strong>CS 125 Course Assistant</strong></p>
+					<p class="alignright"><i>Jan. 2014 - May 2014</i></p>
+				</div>
+				<br/><br/>
+				<ul>
+					<li>- Answer students' questions and assist Teacher's Assistant with any necessary paperwork or bookkeeping during two-hour CS 125 discussion section.</li>
+					</li>Hold one office hour per week.</li>
+					<li>1 credit independent study earned.</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h4 class="panel-title">
+				<a data-toggle="collapse" data-parent="#accordion" href="#skills">Skills</a>
+			</h4>
+		</div>
+		<div id="skills" class="panel-collapse collapse">
+			<div class="panel-body">
+				<div class="col-md-3">
+					<p><i>Programming Languages</i></p>
+					<ul>
+						<li>Java (Proficient)</li>
+						<li>C# (Advanced)</li>
+						<li>VBA (Basic)</li>
+					</ul>
+				</div>
+				<div class="col-md-3">
+					<p><i>Back-end/Database Languages</i></p>
+					<ul>
+						<li>PHP (Basic)</li>
+						<li>SQL (Basic)</li>
+						<li>MySQL (Basic)</li>
+					</ul>
+				</div>
+				<div class="col-md-3">
+					<p><i>Front-end Development</i></p>
+					<ul>
+						<li>HTML (Proficient)</li>
+						<li>CSS (Proficient)</li>
+						<li>WordPress (Proficient)</li>
+						<li>JavaScript (Proficient)</li>
+						<li>jQuery (Basic)</li>
+					</ul>
+				</div>
+				<div class="col-md-3">
+					<p><i>Version Control Systems</i></p>
+					<ul>
+						<li>Mercurial (Proficient)</li>
+						<li>Git (Proficient)</li>
+						<li>SVN (Basic)</li>
+						<li>Team Foundation Server (Basic)</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
