--- a/blog.html
+++ b/blog.html
@@ -1,26 +1,5 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="assets/css/portfolio.css"/>
-	</head>
-	<body class="body-center">
-		<title>Blog</title>
-		<script type="text/javascript" src="assets/js/portfolio.js"></script>
-		<!-- navbar -->
-		<div class="navbar">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="resume.html">Resume</a></li>
-				<li><a href="projects.html">Projects</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
-		<!-- end navbar -->
-		<br/>
-		<br/>
-		<br/>
-		<h1>My Personal Blog</h1>
-		<p><a href="blog/entry1.html">Entry 1: Schrodinger's Principle</a></p>
-	</body>
-</html>
+<div class="jumbotron text-center">
+	<h1>Blog</h1>
+	{{message}}
+</div>
+<p>Check back for my posts. I write everything on paper first, but then I take the time to edit so that you aren't bombarded by my actual stream of conscience.</p>
