--- a/projects.html
+++ b/projects.html
@@ -1,49 +1,16 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="assets/css/portfolio.css"/>
-	</head>
-	<body class="body-center">
-		<title>Projects</title>
-		<script type="text/javascript" src="assets/js/portfolio.js"></script>
-		<!-- navbar -->
-		<div class="navbar">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="resume.html">Resume</a></li>
-				<li><a href="projects.html">Projects</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
-		<!-- end navbar -->
-		<br/>
-		<br/>
-		<br/>
-		<h1>Projects - Past, Present and Future</h1>
-		<h3>Website for Miss Possible - In Progress</h3>
-		<iframe src="http://www.bemisspossible.com" height=300px width=700px></iframe>
-		<p><i>I am currently the web developer for Miss Possible, a startup that is working to change a generation of girls' lives by making dolls of great female role models. We are also working to develop apps that these role models would then teach hands-on activities to these girls. Be sure to support us on Indiegogo <a href="igg.me/at/misspossible">here</a>!</i></p>
-		<p>Programs and Languages Used: HTML, CSS, Bitbucket, Git, Javascript, JQuery, PHP, MySQL</p>
-		<h3>This Website - In Progress</h3>
-		<p><i>I started my online portfolio as an assignment in ENG 100. Throughout this project, I mastered basic web development by coding in HTML, CSS, utilized source control for the project with Github, and managed my website hosting through FTP. I implemented a novel feature which includes portfolio viewers. It's still a work very much in progress, so any feedback is greatly appreciated.</i></p>
-		<p>Programs and Languages Used: HTML, CSS, Github</p>
-		<h3>Where's Waldo International - Facebook Hackathon, Nov. 2013</h3>
-		<iframe src="http://web.engr.illinois.edu/~bifft2" height=300px width=700px></iframe>
-		<p><i>Three team members and I programmed a game of Where's Waldo. Using the Google Maps API, we give Waldo a random location around the world. The player first receives a Javascript message with a clue for the player to guess which continent Waldo is on. Once the right continent is identified, the player is given a Google Maps marker and can move it around the continent until Waldo is found. There is a hot-cold bar at the top of the map to indicate how close or far away the player's current pointer location is from Waldo's actual location. Once Waldo is found, the player is given a score out of 100 based on the time taken to find Waldo. The player can share the game via different social media sites.</i></p>
-		<p>Languages Used: HTML, CSS, Javascript, Google Maps API, Facebook API, Twitter API, Google Plus API, Tumblr API</p>
-		<h3>Recourser Four-Year College Class Planner - MHacks Hackathon, Jan. 2014</h3>
-		<iframe src="http://recourser.herokuapp.com" height=300px width=700px></iframe>
-		<p><i>Three team members and I made a web application that grabs course information from UIUC's Course Catalog. Our application helps students plan out their 4-year plan in college.</i></p>
-		<p>Languages Used: Python, Git, HTML, CSS, Javascript, JQuery</p>
-		<h3>Lakota East Spark Newsmagazine - Opinion Editor, 2011-2012, Webmaster 2012-2013</h3>
-		<h4>Website</h4>
-		<iframe src="http://www.lakotaeastspark.com/" height=300px width=700px></iframe>
-		<p><i>Using the WordPress theme Bangkok Press, I redesigned the website's layout from the previous year's. I also changed the website's hosting provider and utilized Filezilla to upload new forms of media for the website, including podcasts and videos. Note: The website's logo has changed since my time there. The general layout is still the same.</i></p>
-		<p>Programs and Services Used: WordPress, Dreamhost, FileZilla</p>
-		<h4>Journalism Portfolio</h4>
-		<iframe src="assets/elchao2_journalismPortfolio.pdf" height=300px width=700px></iframe>
-		<p><i>I started out my first year in high school journalism writing stories ranging from news briefs to features. I then gravitated toward column writing, becoming Opinion Editor my junior year of high school. Later on, I started to explore the features of graphic design software by doing more infographic pieces.</i></p>
-		<p>Programs Used: Adobe Photoshop, Illustrator, InDesign</p>
-	</body>
-</html>
+<div class="jumbotron text-center">
+	<h1>Projects</h1>
+	{{message}}
+</div>
+<div class="col-md-3">
+	<p>Where's Waldo International</p>
+</div>
+<div class="col-md-3">
+	<p>WCS Sign-In App</p>
+</div>
+<div class="col-md-3">
+	<p>Recourser</p>
+</div>
+<div class="col-md-3">
+	<p>Lakota East Spark Portfolio</p>
+</div>
