--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="emilyChaoApp">
 	<head>
 		<!--stylesheets-->
-		<link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css"/>
+		<link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
 		<link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
 		<link rel="stylesheet" href="assets/css/site.css"/>
 
