--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 		<!--scripts-->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular.min.js" type="text/javascript"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular-route.js"></script>
 		<script src="assets/scripts/site.js" type="text/javascript"></script>
 		<script src="assets/scripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
 		<script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
