--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<base href="/">
 
 		<!--scripts-->
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular.min.js" type="text/javascript"></script>
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular-route.js" type="text/javascript"></script>
+		<script src="assets/scripts/angular.min.js" type="text/javascript"></script>
+		<script src="assets/scripts/angular-route.min.js" type="text/javascript"></script>
 		<script src="site.js" type="text/javascript"></script>
 		<script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
 		<script src="assets/scripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
