--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<link rel="stylesheet" href="assets/css/site.css"/>
 		
 		<!--scripts-->
-		<!--<script src="assets/scripts/angular.min.js" type="text/javascript"></script>
-		<script src="assets/scripts/angular-route.min.js" type="text/javascript"></script>-->
+		<!--<script src="assets/scripts/angular/angular.min.js" type="text/javascript"></script>
+		<script src="assets/scripts/angular/angular-route.min.js" type="text/javascript"></script>-->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.24/angular-route.js"></script>
 		<script src="assets/scripts/site.js" type="text/javascript"></script>
