--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 				</div>
 			</div>
 		</nav>
-
-		<div id="main">
-			<div ng-view></div>
+		<div class="wrapper">
+			<div id="main">
+				<div ng-view></div>
+			</div>
 		</div>
 	</body>
 </html>
