--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,4 +2,8 @@
 	<h1>Blog</h1>
 	{{ message }}
 </div>
-<p>Check back for my posts. I write everything on paper first, but then I take the time to edit so that you aren't bombarded by my actual stream of conscience.</p>
+<div class="row">
+	<p>I just started blogging on Medium!</p>
+	<p>Check out my content below</p>
+	<p>https://medium.com/@emchao</p>
+</div>
