Added medium embed to blog page

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,7 +3,5 @@
 	{{ message }}
 </div>
 <div class="row">
-	<p>I just started blogging on Medium!</p>
-	<p>Check out my content below</p>
-	<p>https://medium.com/@emchao</p>
+	<script async src="https://static.medium.com/embed.js"></script><a class="m-profile" href="https://medium.com/@emchao">Emily Chao</a>
 </div>
