seeing if medium embed works better

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,5 +3,5 @@
 	{{ message }}
 </div>
 <div class="row">
-	<script async src="https://static.medium.com/embed.js"></script><a class="m-profile" href="https://medium.com/@emchao">Emily Chao</a>
+	<a class="m-profile" href="https://medium.com/@emchao">Emily Chao</a>
 </div>
