--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script src="assets/scripts/site.js" type="text/javascript"></script>
 		<script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
 		<script src="assets/scripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
+		<script async src="https://static.medium.com/embed.js"></script>
 
 		<!--meta-->
 		<title>Emily Chao</title>
