--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,18 +2,20 @@
 	<h1>Contact Me</h1>
 	{{ message }}
 </div>
-<form role="form" action="http://forms.brace.io/elchao96@gmail.com">
-	<div class="form-group">
-		<label for="nameInput">Name</label>
-		<input type="text" name="name" class="form-control" id="nameInput" placeholder="Enter name">
-	</div>
-	<div class="form-group">
-		<label for="emailInput">Email</label>
-		<input type="email" name="_replyto" class="form-control" id="emailInput" placeholder="Enter email">
-	</div>
-	<div class="form-group">
-		<label for="messageInput">Message</label>
-		<textarea class="form-control" name="message" id="messageInput" placeholder="Enter message">
-	</div>
-    <button type="submit" value="Send" class="btn btn-default">Send</button>
-</form>
+<div class="row">
+	<form role="form" action="http://forms.brace.io/elchao96@gmail.com">
+		<div class="form-group">
+			<label for="nameInput">Name</label>
+			<input type="text" name="name" class="form-control" id="nameInput" placeholder="Enter name">
+		</div>
+		<div class="form-group">
+			<label for="emailInput">Email</label>
+			<input type="email" name="_replyto" class="form-control" id="emailInput" placeholder="Enter email">
+		</div>
+		<div class="form-group">
+			<label for="messageInput">Message</label>
+			<textarea class="form-control" name="message" id="messageInput" placeholder="Enter message" />
+		</div>
+    	<button type="submit" value="Send" class="btn btn-default">Send</button>
+	</form>
+</div>
