Syntax errors on the brace forms textarea

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="form-group">
 			<label for="messageInput">Message</label>
-			<textarea class="form-control" name="message" id="messageInput" placeholder="Enter message" />
+			<textarea class="form-control" name="message" id="messageInput" rows="6" placeholder="Enter message"></textarea>
 		</div>
     	<button type="submit" value="Send" class="btn btn-default">Send</button>
 	</form>
