Adding the method = POST to the brace forms

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
 	{{ message }}
 </div>
 <div class="row">
-	<form role="form" action="http://forms.brace.io/elchao96@gmail.com">
+	<form role="form" method="POST" action="http://forms.brace.io/elchao96@gmail.com">
 		<div class="form-group">
 			<label for="nameInput">Name</label>
 			<input type="text" name="name" class="form-control" id="nameInput" placeholder="Enter name">
