Editing the format of these jumbotrons

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,6 +1,7 @@
 <div class="jumbotron text-center">
 	<h1>Blog</h1>
-	{{ message }}
+	<p>{{ message0 }}</p>
+	<p>{{ message1 }}</p>
 </div>
 <div class="row">
 	<a class="m-profile" href="https://medium.com/@emchao">Emily Chao</a>
