--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,7 @@
 <div class="jumbotron text-center">
 	<h1>Home</h1>
-	<p>{{ message }}</p>
+	<p>{{ message0 }}</p>
+	<p>{{ message1 }}</p>
+	<p>{{ message2 }}</p>
+	<p>{{ message3 }}</p>
 </div>
