--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,6 +1,7 @@
 <div class="jumbotron text-center">
 	<h1>Resume</h1>
-	{{ message }}
+	<p>{{ message0 }}</p>
+	<p>{{ message1 }}</p>
 </div>
 <h1>Education</h1>
 <div id="education" class="row">
