--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
 	<h1>Contact Me</h1>
-	{{ message }}
+	<p>{{ message0 }}</p>
 </div>
 <div class="row">
 	<form role="form" method="POST" action="http://forms.brace.io/elchao96@gmail.com">
