--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,6 +1,7 @@
 <div class="jumbotron text-center">
 	<h1>Projects</h1>
-	{{ message }}
+	<p>{{ message0 }}</p>
+	<p>{{ message1 }}</p>
 </div>
 <div class="col-md-3">
 	<p>Where's Waldo International</p>
