--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,5 +4,6 @@
 	<p>{{ message1 }}</p>
 </div>
 <div class="row">
+	<script async src="https://static.medium.com/embed.js"></script>
 	<a class="m-profile" href="https://medium.com/@emchao">Emily Chao</a>
 </div>
