--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,8 +4,15 @@
 	<p>{{ message1 }}</p>
 </div>
 <div class="row">
-	<p text="center">
+	<div class="row">
+		<p>Catch my longer, more in-depth muses on Medium <a href="https://medium.com/@emchao">@emchao</a>.</p>
+		<p>Catch my shorter snippets and observations on Twitter <a href="https://twitter.com/emilychaosays">@emilychaosays</a>.</p>
+	<div class="col-md-6">
 		<script async src="https://static.medium.com/embed.js"></script>
 		<a class="m-profile" href="https://medium.com/@emchao">Emily Chao</a>
-	</p>
+	</div>
+	<div class="col-md-6">
+		<a class="twitter-timeline" href="https://twitter.com/emilychaosays" data-widget-id="513842384287694848">Tweets by @emilychaosays</a>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+	</div>
 </div>
