--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
 		<script src="assets/scripts/bootstrap/bootstrap.min.js" type="text/javascript"></script>
 		<script async src="https://static.medium.com/embed.js"></script>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 		<!--meta-->
 		<title>Emily Chao</title>
