added repo.js, modified projects page, added images

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,15 +3,38 @@
 	<p>{{ message0 }}</p>
 	<p>{{ message1 }}</p>
 </div>
-<div class="col-md-3">
-	<p>Where's Waldo International</p>
+<div class="row">
+	<h1>In Progress</h1>
+	<div class="col-md-3">
+		<h1>ExpiringYa</h1>
+		<p>An app that notifies users when their food is about to expire</p>
+		<p>Github Repository</p>
+		<div id="repoExpiringYa"></div>
+	</div>
+	<div class="col-md-3">
+		<h1>PlanQuest</h1>
+		<p>An ASP.NET MVC project that allows users to utilize agile taskboards for their school assignments</p>
+		<p>Github Repository</p>
+		<div id="repoPlanQuest"></div>
+	</div>
 </div>
-<div class="col-md-3">
-	<p>WCS Sign-In App</p>
-</div>
-<div class="col-md-3">
-	<p>Recourser</p>
-</div>
-<div class="col-md-3">
-	<p>Lakota East Spark Portfolio</p>
-</div>
+<div class="row">
+	<h1>Previous Projects</h1>
+	<div class="col-md-3">
+		<img src="../assets/images/misspossible.png" alt="Miss Possible Website" />
+		<h1>Miss Possible's Website</h1>
+		<p>Dolls and Apps that Empower Girls to Dream Big</p>
+		<button value="Learn More" class="btn btn-default">Learn More</button>
+	</div>
+	<div class="col-md-3">
+		<p>Where's Waldo International</p>
+	</div>
+	<div class="col-md-3">
+		<p>WCS Sign-In App</p>
+	</div>
+	<div class="col-md-3">
+		<p>Recourser</p>
+	</div>
+	<div class="col-md-3">
+		<p>Lakota East Spark Portfolio</p>
+	</div>
