--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,38 +3,37 @@
 	<p>{{ message0 }}</p>
 	<p>{{ message1 }}</p>
 </div>
-<div class="row">
-	<h1>In Progress</h1>
-	<div class="col-md-3">
-		<h1>ExpiringYa</h1>
-		<p>An app that notifies users when their food is about to expire</p>
-		<p>Github Repository</p>
-		<div id="repoExpiringYa"></div>
-	</div>
-	<div class="col-md-3">
-		<h1>PlanQuest</h1>
-		<p>An ASP.NET MVC project that allows users to utilize agile taskboards for their school assignments</p>
-		<p>Github Repository</p>
-		<div id="repoPlanQuest"></div>
-	</div>
+<div class="col-md-3">
+	<h1>ExpiringYa</h1>
+	<p><i>IN PROGRESS</i></p>
+	<p>An app that notifies users when their food is about to expire</p>
+	<p>C#, Xamarin Studio</p>
+	<button value="View On Github" class="btn btn-default"><a href="https://github.com/elchao96/ExpiringYa" target="_blank">View On Github</a></button>
 </div>
-<div class="row">
-	<h1>Previous Projects</h1>
-	<div class="col-md-3">
-		<img src="../assets/images/misspossible.png" alt="Miss Possible Website" />
-		<h1>Miss Possible's Website</h1>
-		<p>Dolls and Apps that Empower Girls to Dream Big</p>
-		<button value="Learn More" class="btn btn-default">Learn More</button>
-	</div>
-	<div class="col-md-3">
-		<p>Where's Waldo International</p>
-	</div>
-	<div class="col-md-3">
-		<p>WCS Sign-In App</p>
-	</div>
-	<div class="col-md-3">
-		<p>Recourser</p>
-	</div>
-	<div class="col-md-3">
-		<p>Lakota East Spark Portfolio</p>
-	</div>
+<div class="col-md-3">
+	<h1>PlanQuest</h1>
+	<p><i>IN PROGRESS</i></p>
+	<p>An ASP.NET MVC project that allows users to utilize agile taskboards for their school assignments</p>
+	<p>HTML, CSS, C#, Javascript, KnockoutJS, Xamarin Studio</p>
+	<button value="View On Github" class="btn btn-default"><a href="https://github.com/elchao96/PlanQuest" target="_blank">View On Github</a></button>
+</div>
+<div class="col-md-3">
+	<img src="../assets/images/misspossible.png" alt="Miss Possible Website" />
+	<h1>Miss Possible's Website</h1>
+	<p>Dolls and Apps that Empower Girls to Dream Big</p>
+	<p>HTML, CSS, Javascript, PHP, MySQL</p>
+	<button value="Learn More" class="btn btn-default"><a href="http://www.bemisspossible.com" target="_blank">Learn More</a></button>
+</div>
+<div class="col-md-3">
+	<img src="../assets/images/wherewaldo.png" alt="Where's Waldo International" />
+	<h1>Where's Waldo International</h1>
+	<p>A game that sticks Waldo in a random location within the world and lets you find him</p>
+	<p>HTML, CSS, Javascript, Google Maps API, Facebook API, Twitter API, Google Plus API, Tumblr API</p>
+	<button value="Play Game" class="btn btn-default"><a href="http://web.engr.illinois.edu/~bifft2/" target="_blank">Play the Game</a></button>
+</div>
+<div class="col-md-3">
+	<p>WCS Sign-In App</p>
+</div>
+<div class="col-md-3">
+	<p>Recourser</p>
+</div>
