added carousel to display the pictures of previous projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,6 +3,52 @@
 	<p>{{ message0 }}</p>
 	<p>{{ message1 }}</p>
 </div>
+
+<div id="carouselProjects" class="carousel slide" data-ride="carousel">
+	<!-- Indicators -->
+	<ol class="carousel-indicators">
+    	<li data-target="#carouselProjects" data-slide-to="0" class="active"></li>
+    	<li data-target="#carouselProjects" data-slide-to="1"></li>
+    	<li data-target="#carouselProjects" data-slide-to="2"></li>
+  	</ol>
+  	<!-- Wrapper for slides -->
+  	<div class="carousel-inner">
+    	<div class="item active">
+      		<img class="projectImg" src="../assets/images/misspossible.png" alt="Miss Possible Website" />
+      		<div class="carousel-caption">
+        		<p>Miss Possible Website</p>
+      		</div>
+    	</div>
+    	<div class="item">
+      		<img class="projectImg" src="../assets/images/wherewaldo.png" alt="Where's Waldo International" />
+      		<div class="carousel-caption">
+        		<p>Where's Waldo International</p>
+      		</div>
+    	</div>
+    	<div class="item">
+    		<img class="projectImg" src="../assets/images/wcssignin.png" alt="WCS Sign-In App" />
+    		<div class="carousel-caption">
+    			<p>WCS Sign-In App</p>
+    		</div>
+    	</div>
+    	<div class="item">
+    		<img class="projectImg" src="../assets/images/recourser.png" alt="Recourser" />
+    		<div class="carousel-caption">
+    			<p>Recourser</p>
+    		</div>
+    	</div>
+  	</div>
+
+  	<!-- Controls -->
+  	<a class="left carousel-control" href="#carouselProjects" role="button" data-slide="prev">
+    	<span class="glyphicon glyphicon-chevron-left"></span>
+  	</a>
+  	<a class="right carousel-control" href="#carouselProjects" role="button" data-slide="next">
+    	<span class="glyphicon glyphicon-chevron-right"></span>
+  	</a>
+</div>
+
+
 <div class="col-md-4">
 	<h1>ExpiringYa</h1>
 	<p><i>IN PROGRESS</i></p>
@@ -18,28 +64,24 @@
 	<button value="View On Github" class="btn btn-default"><a href="https://github.com/elchao96/PlanQuest" target="_blank">View On Github</a></button>
 </div>
 <div class="col-md-4">
-	<img class="projectImg" src="../assets/images/misspossible.png" alt="Miss Possible Website" />
 	<h1>Miss Possible's Website</h1>
 	<p>Dolls and Apps that Empower Girls to Dream Big</p>
 	<p>HTML, CSS, Javascript, PHP, MySQL</p>
 	<button value="Learn More" class="btn btn-default"><a href="http://www.bemisspossible.com" target="_blank">Learn More</a></button>
 </div>
 <div class="col-md-4">
-	<img class="projectImg" src="../assets/images/wherewaldo.png" alt="Where's Waldo International" />
 	<h1>Where's Waldo International</h1>
 	<p>With 3 team members, created a game that sticks Waldo in a random location within the world and lets you find him</p>
 	<p>HTML, CSS, Javascript, Google Maps API, Facebook API, Twitter API, Google Plus API, Tumblr API</p>
 	<button value="Play Game" class="btn btn-default"><a href="http://web.engr.illinois.edu/~bifft2/" target="_blank">Play the Game</a></button>
 </div>
 <div class="col-md-4">
-	<img class="projectImg" src="../assets/images/wcssignin.png" alt="WCS Sign-In App" />
 	<h1>WCS Sign-In App</h1>
 	<p>Along with team members on WCS' Tech Team Committee, designed the front-end of a web application that tracks attendance at UIUC WCS' events and allows members to check their points</p>
 	<p>HTML, CSS, Javascript, PHP, MySQL</p>
 	<button value="Learn More" class="btn btn-default"><a href="http://wcssignin.web.engr.illinois.edu/" target="_blank">Learn More</a></button>
 </div>
 <div class="col-md-4">
-	<img class="projectImg" src="../assets/images/recourser.png" alt="Recourser" />
 	<h1>Recourser</h1>
 	<p>With 3 team members, created a web app that allows students to plan out what classes they want to take for each semester of college</p>
 	<p>HTML, CSS, Javascript, jQuery, Python</p>
