--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,6 +10,7 @@
     	<li data-target="#carouselProjects" data-slide-to="0" class="active"></li>
     	<li data-target="#carouselProjects" data-slide-to="1"></li>
     	<li data-target="#carouselProjects" data-slide-to="2"></li>
+    	<li data-target="#carouselProjects" data-slide-to="3"></li>
   	</ol>
   	<!-- Wrapper for slides -->
   	<div class="carousel-inner">
