adjusting text on miss possible

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -57,7 +57,7 @@
 	</div>
 	<div class="col-md-4">
 		<h1>Miss Possible's Website</h1>
-		<p>Dolls and Apps that Empower Girls to Dream Big</p>
+		<p>Designed the website for startup Miss Possible, who's goal is to develop dolls and apps that empower girls to dream big</p>
 		<p>HTML, CSS, Javascript, PHP, MySQL</p>
 		<button value="Learn More" class="btn btn-default"><a href="http://www.bemisspossible.com" target="_blank">Learn More</a></button>
 	</div>
