--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
 		<link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
 		<link rel="stylesheet" href="assets/css/site.css"/>
+
+		<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 		
 		<!--scripts-->
 		<script src="assets/scripts/jquery-2.1.1.min.js" type="text/javascript"></script>
