--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
        					<li><a href="#">Home</a></li>
 						<li><a href="#resume">Resume</a></li>
 						<li><a href="#projects">Projects</a></li>
-						<li><a href="#blog">Blog</a></li>
+						<li><a href="https://medium.com/@emchao">Blog</a></li>
 						<li><a href="#contact">Contact Me</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
