adding blank targets to links in navbar

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 						<li><a href="#contact">Contact Me</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="https://github.com/elchao96"><i class="fa fa-github-square fa-2x"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/elchao96"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-						<li><a href="https://twitter.com/emilychaosays"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+						<li><a href="https://github.com/elchao96" target="_blank"><i class="fa fa-github-square fa-2x"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/elchao96" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+						<li><a href="https://twitter.com/emilychaosays" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
 					</ul>
 				</div>
 			</div>
