not going to try to do these div things

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -3,7 +3,7 @@
 	<p>{{ message0 }}</p>
 	<p>{{ message1 }}</p>
 </div>
-<h1>Education</h1><i class="fa fa-plus-square" id="educationExpand"></i>
+<h1>Education</h1>
 <div id="education" class="row">
 	<!-- UIUC -->
 	<div class="floatCleared">
