removing the page class for now because animation is buggy

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		</nav>
 		<div class="wrapper">
 			<div id="main">
-				<div class="{{ pageClass }}"ng-view></div>
+				<div ng-view></div>
 			</div>
 		</div>
 	</body>
