changed the title

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-	<h1>Home</h1>
+	<h1>Emily Chao</h1>
 	<p>{{ message0 }}</p>
 	<p>{{ message1 }}</p>
 	<p>{{ message2 }}</p>
@@ -8,5 +8,5 @@
 <div class="row">
 	<h1>Hi there!</h1>
 	<p>This site is currently under construction, but feel free to look around and give feedback.</p>
-	<p>I am currently using AngularJS routing, Bootstrap and HTML/CSS/Javascript/JQuery. Feedback is appreciated!</p>
+	<p>I am currently using AngularJS routing, Bootstrap, Font-Awesome and HTML/CSS/Javascript/JQuery. Feedback is appreciated!</p>
 </div>
